Fix: 메인 페이지 일부 디자인 수정

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,7 +1,6 @@
 @font-face {
-  font-family: "KBO-Dia-Gothic"; /* 사용할 폰트의 이름을 정의 */
-  src: url("../assets/fonts/KBO-Dia-Gothic_bold.woff") format("woff"),
-    url("../assets/fonts/KBO-Dia-Gothic_medium.woff") format("woff"); /* 폰트 파일의 위치 */
+  font-family: "KBO-Dia-Gothic";
+  src: url("../assets/fonts/KBO-Dia-Gothic_regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
