--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,13 +1,23 @@
 @font-face {
   font-family: "KBO-Dia-Gothic";
-  src: url("../assets/fonts/KBO-Dia-Gothic_regular.woff") format("woff");
+  src: url("../assets/fonts/KBO-Dia-Gothic_light.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "KBO-Dia-Medium";
+  src: url("../assets/fonts/KBO-Dia-Gothic_medium.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
 
 body {
-  font-family: "KBO-Dia-Gothic", sans-serif;
-  font-weight: 100;
+  font-family: "KBO-Dia-Gothic";
+}
+
+.kbo-font-medium {
+  font-family: "KBO-Dia-Medium";
 }
 
 th {
